src/components/portfolioSection/portfolioSection.css
.portfolio {
  /* height: 100%; */
  height: 600vh;
  position: relative;
}

.pList {
  position: sticky;
  top: 0;
  display: flex;
  height: 100vh;
  /* width: fit-content; */
  width: max-content;
}

.pProgress {
  position: sticky;
  width: 80px;
  height: 80px;
  left: 0;
  bottom: 80%;
}

.pItem {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
}

body[data-theme="dark"] .pItem:nth-child(1) {
  background: linear-gradient(to right, #12071f, #210b3a);
}
body[data-theme="dark"] .pItem:nth-child(2) {
  background: linear-gradient(to right, #210b3a, #371064);
}
body[data-theme="dark"] .pItem:nth-child(3) {
  background: linear-gradient(to right, #371064, #390b6e);
}
body[data-theme="dark"] .pItem:nth-child(4) {
  background: linear-gradient(to right, #390b6e, #46098b);
}
body[data-theme="dark"] .pItem:nth-child(5) {
  background: linear-gradient(to right, #46098b, #12071f);
}

.pImg {
  width: 40%;
  border-radius: 20px;
  overflow: hidden;
}

.pImg img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.pText {
  width: 40%;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.pText h1 {
  font-size: 56px;
}

.pText p {
  font-weight: 300;
  text-align: justify;
  color: var(--text-secondary);
}

.pText button {
  background-color: var(--text-emphasis);
  padding: 12px;
  border-radius: 10px;
  border: none;
  font-weight: 500;
  cursor: pointer;
}

@media (max-width: 1536px) {
  .pItem {
    gap: 50px;
  }
}

@media (max-width: 1280px) {
  .pText h1 {
    font-size: 48px;
  }
}

@media (max-width: 1024px) {
  .pItem {
    flex-direction: column;
  }
  .pImg,
  .pText {
    width: 80%;
  }
  .pProgress {
    bottom: 100px;
    left: 100%;
    width: 60px;
    height: 60px;
  }
  .pText h1 {
    font-size: 36px;
  }
}

@media (max-width: 768px) {
  .pProgress {
    width: 50px;
    height: 50px;
  }
  .pText h1 {
    font-size: 26px;
  }
  .pText {
    align-items: center;
    text-align: center;
  }
}

@media (max-width: 450px) {
  .pText h1 {
    font-size: 24px;
  }
  .pProgress {
    width: 40px;
    height: 40px;
  }
}

